Added uninstall information for automated installation.
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/trunk@1545 7d736ef5-cfd4-0310-9c9a-b52d5c14b761